syntax = "proto3";
option java_package = "org.onosproject.grpc.net.device.models";

package net.device;

enum PortTypeProto {
    // Signifies copper-based connectivity.
    COPPER = 0;
    // Signifies optical fiber-based connectivity.
    FIBER = 1;
    // Signifies optical fiber-based packet port.
    PACKET = 2;
    // Signifies optical fiber-based optical tributary port (called T-port).
    //The signal from the client side will be formed into a ITU G.709 (OTN) frame.
    ODUCLT = 3;
    // Signifies optical fiber-based Line-side port (called L-port).
    OCH = 4;
    // Signifies optical fiber-based WDM port (called W-port).
    //Optical Multiplexing Section (See ITU G.709).
    OMS = 5;
    // Signifies virtual port.
    VIRTUAL_PORT = 6;
}